# llmqa

./: .gitignore  LICENSE  README.md  environment.yml  generate_qa.py  pyproject.toml  requirements.txt
llmqa/: __init__.py
llmqa/core/: __init__.py  llm_service.py
llmqa/evaluators/: __init__.py  critique.py
llmqa/generators/: __init__.py  qa_generator.py
llmqa/models/: __init__.py  base.py  critique_agent.py  databricks.py  google.py  model_factory.py  model_registry.py  openrouter.py  rosie_llama.py
llmqa/utils/: __init__.py  logging_config.py
scripts/: batch_llmqa.sh
scripts/examples/: opsys_chunks.csv  os_jl_llmqa.sh
tests/: debug_qa_critique.py  test_critique_agent.py  test_databricks.py  test_qa_generator.py  test_rosie_llama.py
