[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmqa"  # 
version = "0.1.12" 
description = "Large Language Model Question and Answer Generation"
authors = [{ name = "Olek Drobek", email = "drobeka@msoe.edu" }]
license = {text = "MIT"}  # TODO Need to add LICENSE file and change this
readme = "README.md"  # Path to your README file
keywords = ["LLM", ] 
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha", 
]

dependencies = [
    "openai>=1.52.0",
    "pandas>=1.2.2",
    "tqdm>=4.65.0",
]

