[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llmqa" 
version = "0.0.a1.dev11" 
description = "Large Language Model Question and Answer Generation"
authors = [{ name = "Olek Drobek", email = "drobeka@msoe.edu" }]
license = {text = "MIT"}  # TODO Need to add LICENSE file and change this
readme = "README.md"  
keywords = ["LLM", "Evaluation", "Critique"] 
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha", 
]

dependencies = [
    "openai>=1.52.0",
    "google-genai>=1.10.0",
    "paramiko>=3.5.1",
]

[project.urls]
Repository = "https://github.com/odrobek/llmqa"
